--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p><b>Sitio Profesional: </b><br>Proyecto_FichaPersonal</p>
       <p><b>Descripción: </b><br>Este sitio web es una página personal creada por un estudiante de Licenciatura en Gestión de la Tecnología de la Información en la UADE presentando su perfil e información profesional, y enlaces a su proyecto.</p>
       <p><b>Prototipo: </b><a href="https://www.figma.com/proto/dKq6nKTMd6BiyPjpaeFtZm/Parcial-1?type=design&node-id=1-4&t=jLNfCWvDD5Oh1Im5-0&scaling=min-zoom&page-id=0%3A1">Link al prototipo</a></p>
-      <p><b>Sitio: </b><a href="URL">Link al sitio</a></href></p>
+      <p><b>Sitio: </b><a href="https://nachavez1.github.io/desarrolloweb-parcial1/">Link al sitio</a></href></p>
       <p><b>Repositorio: </b><a href="https://github.com/nachavez1/desarrolloweb-parcial1">Link al repositorio</a></href></p>
     </div>
   </div>
