--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     </div>
     <div class="column" style="padding: 15px;">
       <p><b>Nombre y Apellido: </b>Nahuel Chavez</p>
-      <p><b>Carrera: </b>Licenciatura en gestión de la tecnología de la información</p>
+      <p><b>Carrera: </b>Licenciatura en gesti&oacute;n de la tecnolog&iacute;a de la informaci&oacute;n</p>
       <p><b>Curso: </b>475657</p>
       <p><b>Sitio Profesional: </b><br>Proyecto_FichaPersonal</p>
-      <p><b>Descripción: </b><br>Este sitio web es una página personal creada por un estudiante de Licenciatura en Gestión de la Tecnología de la Información en la UADE presentando su perfil e información profesional, y enlaces a su proyecto.</p>
+      <p><b>Descripci&oacute;n: </b><br>Este sitio web es una p&aacute;gina personal creada por un estudiante de Licenciatura en Gesti&oacute;n de la Tecnolog&iacute;a de la Informaci&oacute;n en la UADE presentando su perfil e informaci&oacute;n profesional, y enlaces a su proyecto.</p>
       <p><b>Prototipo: </b><a href="https://www.figma.com/proto/dKq6nKTMd6BiyPjpaeFtZm/Parcial-1?type=design&node-id=1-4&t=jLNfCWvDD5Oh1Im5-0&scaling=min-zoom&page-id=0%3A1" target="_blank">Link al prototipo</a></p>
       <p><b>Sitio: </b><a href="https://nachavez1.github.io/desarrolloweb-parcial1/" target="_blank">Link al sitio</a></href></p>
       <p><b>Repositorio: </b><a href="https://github.com/nachavez1/desarrolloweb-parcial1" target="_blank">Link al repositorio</a></href></p>
