--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
 </header>
 
-<!-- Mision, Vision y Valores -->
+<!-- Main -->
 <main>
   <div class="container">
     <div class="column">
